# shelly-firmware

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  shelly_firmware.py
tools/: build_tools.sh  esp8266.patch
