[tool.poetry]
name = "shelly-firmware"
version = "0.1.0"
description = ""
authors = ["Paul Schroeder <milkpirate@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "shelly_firmware"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.22.0"
pysh = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
